--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solid-Dollop Home Page</title>
+    <link rel="stylesheet" href="../css/home-page.css">
+    <script src="../js/javascript.js" defer></script>
 </head>
 <body>
     
