made the header title and added the initial stylizing

--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/home-page.css">
+    <title>Solid Dollop</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="title">
+            Solid Dollop
+        </h1>
+        <h2 class="title">
+            Memory Card Game
+        </h2>
+
+    </header>
 </body>
 </html>
