--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -8,6 +8,8 @@
     <script src="../js/javascript.js" defer></script>
 </head>
 <body>
-    
+    <footer>
+        <button id="player-stats-modal">Player Stats</button>
+    </footer>
 </body>
 </html>
