--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solid-Dollop Home Page</title>
-    <link rel="stylesheet" href="../css/home-page.css">
-    <script src="../js/javascript.js" defer></script>
-</head>
-<body>
-    
-</body>
-</html>
+  <main>
+    <button class="buttonMode"> 
+        <a href="./card-easy.html">Easy</a>
+    </button> 
+    <button class="buttonMode"> 
+        <a href="./card-medium.html">Medium</a>
+    </button> 
+    <button class="buttonMode"> 
+        <a href="./card-hard.html">Hard</a>
+    </button> 
+</main>
