--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -28,6 +28,14 @@
         <button class="buttonMode">
             <a href="./card-hard.html">Hard</a>
         </button>
+
+        <div class="mid-text">
+            
+            <h2>
+                Choose a difficulty level to start the game!
+            </h2>
+        </div>
+
     </main>
     <footer>
         <button id="player-stats-modal">Player Stats</button>
