yall saw all that

--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <header class="header">
         <h1 class="title">
             Solid Dollop
@@ -18,20 +19,25 @@
             Memory Card Game
         </h2>
     </header>
+
     <main>
-        <button class="buttonMode">
+        <section class="flex-container">
+            <button class="buttonMode">
             <a href="./card-easy.html">Easy</a>
-        </button>
-        <button class="buttonMode">
-            <a href="./card-medium.html">Medium</a>
-        </button>
-        <button class="buttonMode">
-            <a href="./card-hard.html">Hard</a>
-        </button>
+            </button>
+            <button class="buttonMode">
+                <a href="./card-medium.html">Medium</a>
+            </button>
+            <button class="buttonMode">
+                <a href="./card-hard.html">Hard</a>
+            </button>
+        </section>
     </main>
+
     <footer>
         <button id="player-stats-modal">Player Stats</button>
     </footer>
+
 </body>
 
 </html>
