feature button bug fix

--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -22,15 +22,24 @@
 
     <main>
         <section class="flex-container">
-            <button class="buttonMode">
-            <a href="./card-easy.html">Easy</a>
-            </button>
-            <button class="buttonMode">
-                <a href="./card-medium.html">Medium</a>
-            </button>
-            <button class="buttonMode">
-                <a href="./card-hard.html">Hard</a>
-            </button>
+
+            <a href="./card-easy.html">
+                <button class="buttonMode">
+                    Easy
+                </button>
+            </a>
+
+            <a href="./card-medium.html">
+                <button class="buttonMode">
+                    Medium
+                </button>
+            </a>
+
+            <a href="./card-hard.html">
+                <button class="buttonMode">
+                    Hard
+                </button>
+            </a>
         </section>
     </main>
 
