--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -29,6 +29,10 @@
             <a href="./card-hard.html">Hard</a>
         </button>
 
+    <div class="second-heading">
+        <h2>Please select your level of difficulty!</h2>
+    </div>
+
     </main>
     <footer>
         <button id="player-stats-modal">Player Stats</button>
