--- a/assets/html/card-easy.html
+++ b/assets/html/card-easy.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid-Dollop Easy</title>
-    <link rel="stylesheet" href="../css/card-game.css">
+    <link rel="stylesheet" href="../css/card-easy.css">
     <script src="../js/javascript.js" defer></script>
 </head>
 <body>
-    
+    <h1 class="title">Solid Dollop</h1>
+
+    <h2 class="title">Memory Card Game</h2>
+
+    <div class="grid-container"></div>
+
+    <p>Score: <span id="score">0</span></p>
+
+    <div class="actions">
+        <button onclick="restart()">Restart</button>
+    </div>
 </body>
 </html>
