Home page player stat modal

--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        
+
         <section class="flex-container">
 
             <a href="./card-easy.html">
@@ -51,6 +51,16 @@
 
     <footer>
         <button id="player-stats-modal">Player Stats</button>
+        <div id="player-stats" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>PLAYER STATS</h2><br>
+                <p>Completions: ###</p><br>
+                <p>Number of pairs: ####</p><br>
+                <p>Most recent time: ##:##:##</p><br>
+                <p>Fastest time: ##:##:##</p>
+            </div>
+        </div>
     </footer>
 
 </body>
