--- a/assets/html/card-easy.html
+++ b/assets/html/card-easy.html
@@ -12,12 +12,18 @@
 
     <h2 class="title">Memory Card Game</h2>
 
-    <div class="grid-container"></div>
-
-    <p>Score: <span id="score">0</span></p>
-
-    <div class="actions">
-        <button onclick="restart()">Restart</button>
+    <div class="game-container">
+        <div class="game-info-container">
+            <div class="game-info">
+                <p>Time:</p> <span id="time"></span>
+            </div>
+        </div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
     </div>
 </body>
 </html>
