added the html and the initial style for the medium page

--- a/assets/html/card-medium.html
+++ b/assets/html/card-medium.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid-Dollop Medium</title>
-    <link rel="stylesheet" href="../css/card-game.css">
+    <link rel="stylesheet" href="../css/card-medium.css">
     <script src="../js/javascript.js" defer></script>
 </head>
 <body>
-    
+    <h1 class="title">Solid Dollop</h1>
+
+    <h2 class="title">Memory Card Game</h2>
+
+    <div class="game-container">
+        <div class="game-info-container">
+            <div class="game-info">
+                <p>Time:</p> <span id="time"></span>
+            </div>
+        </div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
 </body>
 </html>
