added back button to all game pages, set the cursor to pointer when hovered on buttons and cards

--- a/assets/html/card-easy.html
+++ b/assets/html/card-easy.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     
+    <a href="./home-page.html">
+        <button class="backBtn">
+            Back
+        </button>
+    </a>
 
     <div class="game-container">
         <div class="game-info-container">
