--- a/assets/html/card-hard.html
+++ b/assets/html/card-hard.html
@@ -10,6 +10,12 @@
 <body>
     
 
+    <a href="./home-page.html">
+        <button class="backBtn">
+            Back
+        </button>
+    </a>
+    
     <div class="game-container">
         <div class="game-info-container">
             <div class="game-info">
