--- a/assets/html/card-medium.html
+++ b/assets/html/card-medium.html
@@ -8,6 +8,16 @@
     <script src="../js/javascript.js" defer></script>
 </head>
 <body>
+
+    <section>
+
+        <a href="./home-page.html">
+            <button class="backBtn">
+                Back
+            </button>
+        </a>
+        
+    </section>
     
 
     <div class="game-container">
