--- a/assets/html/home-page.html
+++ b/assets/html/home-page.html
@@ -51,7 +51,7 @@
 
     <footer>
         <button id="player-stats-modal">Player Stats</button>
-        <div id="player-stats" class="modal">
+        <div id="player-stats" class="modal" style="display: none;">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2>PLAYER STATS</h2><br>
