added event listeners for all the card pages

--- a/assets/html/card-hard.html
+++ b/assets/html/card-hard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid-Dollop Hard</title>
     <link rel="stylesheet" href="../css/card-hard.css">
-    <script src="../js/javascript.js" defer></script>
+    <script src="../js/card-hard.js" defer></script>
 </head>
 <body>
     
