--- a/assets/html/card-easy.html
+++ b/assets/html/card-easy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid-Dollop Easy</title>
     <link rel="stylesheet" href="../css/card-easy.css">
-    <script src="../js/javascript.js" defer></script>
+    <script src="../js/card-easy.js" defer></script>
 </head>
 <body>
     
