movbed the html files to the main directory

--- a/home-page.html
+++ b/home-page.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid Dollop</title>
-    <link rel="stylesheet" href="../css/home-page.css">
-    <script src="../js/javascript.js" defer></script>
+    <link rel="stylesheet" href="./assets/css/home-page.css">
+    <script src="./assets/js/javascript.js" defer></script>
 </head>
 
 <body>
