--- a/card-easy.html
+++ b/card-easy.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solid-Dollop Easy</title>
-    <link rel="stylesheet" href="../css/card-easy.css">
-    <script src="../js/card-easy.js" defer></script>
+    <link rel="stylesheet" href="./assets/css/card-easy.css">
+    <script src="./assets/js/card-easy.js" defer></script>
 </head>
 <body>
     
