--- a/assets/html/card-medium.html
+++ b/assets/html/card-medium.html
@@ -23,10 +23,14 @@
     <div class="game-container">
         <div class="game-info-container">
             <div class="game-info">
-                <p>Time:</p> <span id="time"></span>
+                
+            </div>
+            <div class="timer">
+                <label id="min">00</label>
+                <label id="colon">:</label>
+                <label id="sec">00</label>
             </div>
         </div>
-        
 
         <div class="card visible">
             <div class="card-back card-face">
