--- a/card-hard.html
+++ b/card-hard.html
@@ -19,7 +19,11 @@
     <div class="game-container">
         <div class="game-info-container">
             <div class="game-info">
-                <p>Time:</p> <span id="time"></span>
+                <div class="timer">
+                    <label id="min">00</label>
+                    <label id="colon">:</label>
+                    <label id="sec">00</label>
+                </div>
             </div>
         </div>
         
