--- a/card-easy.html
+++ b/card-easy.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <a href="./home-page.html">
+    <a href="./index.html">
         <button class="backBtn">
             Back
         </button>
