--- a/card-hard.html
+++ b/card-hard.html
@@ -10,7 +10,7 @@
 <body>
     
 
-    <a href="./home-page.html">
+    <a href="./index.html">
         <button class="backBtn">
             Back
         </button>
