--- a/card-medium.html
+++ b/card-medium.html
@@ -11,7 +11,7 @@
 
     <section>
 
-        <a href="./home-page.html">
+        <a href="./index.html">
             <button class="backBtn">
                 Back
             </button>
